--- a/locales/fr.json
+++ b/locales/fr.json
@@ -3703,7 +3703,36 @@
     "288": "Psycho Boost",
     "289": "Onde Originelle",
     "290": "Lame Pang\u0351enne",
-    "291": "Cadeau"
+    "291": "Cadeau",
+    "292": "Ball'Météo (feu)",
+    "293": "Ball'Météo (glace)",
+    "294": "Ball'Météo (roche)",
+    "295": "Ball'Météo (eau)",
+    "296": "Végé-Attak",
+    "297": "Anti-Air",
+    "298": "Rafale Feu",
+    "299": "Hydroblast",
+    "300": "Dernier Recours",
+    "301": "Poing Météor",
+    "302": "Coud'krâne",
+    "303": "Bombe Acide",
+    "304": "Telluriforce",
+    "305": "Pince-Masse",
+    "306": "Furie-Bond",
+    "307": "Éclate Griffe",
+    "308": "Octazooka",
+    "309": "Miroi-Tir",
+    "310": "Surpuissance",
+    "311": "Dard Mortel",
+    "312": "Feuillemagik",
+    "313": "Vampirisme",
+    "314": "Vampipoing",
+    "315": "Os'Ombre",
+    "316": "Ocroupi",
+    "317": "Pied Brûleur",
+    "318": "Coquilame",
+    "319": "Poing Boost",
+    "320": "Charme"
   },
   "pokemon": {
     "001": "Bulbizarre",
